<resources>
    <string name="app_name">Vault</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_vault_login">Vault Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_home">Vault Password Manager</string>
    <string name="title_activity_create_pin">Create a PIN</string>

    <string name="title_activity_login">Vault Login</string>
    <string name="create_pin">Please create a PIN</string>
    <string name="enter_pin_hint">enter PIN</string>
    <string name="login_pin_hint">PIN</string>
    <string name="confirm_pin_hint">confirm PIN</string>
    <string name="login_pin_header">Enter PIN to unlock</string>
    <string name="accounts_file_path">"/Vault/app/src/main/assets/AccountsData.txt"</string>
    <string name="create_username_hint">Username</string>
    <string name="create_password_hint">Password</string>
    <string name="create_account_button_text">save</string>
    <string name="user_pin_key">VaultPIN</string>
    <string name="create_pin_button_text">Create</string>
    <string name="account_type_hint">Name of Account</string>
    <string name="logout">Logout</string>
    <string name="about">About</string>
    <string name="menu">Menu</string>
    <string name="about_info">Created by Yossi Rotenstreich and Leonardo Gelbman</string>
    <string name="title_activity_settings">Settings</string>



    <string name="stay_title">Stay Logged In</string>
    <string name="stay_summary_on">Sign me out whenever I open a new app or go to the home screen
    </string>
    <string name="stay_summary_off">Keep me signed in whenever I open a new app or go to the home screen</string>
    <string name="stay_logged_in">Keep me signed in</string>
    <string name="stay_logged_in_summary">keep me logged in when the app is minimized</string>
    <string name="settings">Settings</string>
    <string name="security_settings">Security</string>


</resources>