<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/create_pin_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher_round"
        android:gravity="center"
        android:paddingVertical="@dimen/standard_padding"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/create_username_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/create_username_hint" />

    <EditText
        android:id="@+id/create_password_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/create_password_hint" />

    <Button
        android:id="@+id/create_account_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account_button_text"
        android:textAllCaps="false" />
</LinearLayout>