<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:layout_margin="@dimen/create_pin_margin">

    <ImageView
        android:id="@+id/create_pin_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher_round"
        android:gravity="center"
        android:paddingVertical="@dimen/create_pin_margin"
        app:layout_constraintTop_toTopOf="parent"
        />


    <TextView
        android:id="@+id/enter_pin_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_pin"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/create_pin_logo"
        android:paddingVertical="@dimen/create_pin_margin"
        android:textSize="@dimen/header_text_size"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/enter_pin_et"
        android:layout_width="@dimen/et_width"
        android:layout_height="wrap_content"

        android:layout_gravity="center"
        android:hint="@string/enter_pin_hint"
        android:paddingVertical="@dimen/create_pin_margin"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enter_pin_tv" />

    <EditText
        android:layout_width="@dimen/et_width"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/create_pin_margin"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/enter_pin_et"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/confirm_pin_hint"
        />
</androidx.constraintlayout.widget.ConstraintLayout>